--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <div class="parametro-senha-botoes">
                         <button  class="parametro-senha__botao"  >-</button>
                         <p class="parametro-senha__texto" >12</p>
-                        <button  class="parameteo-senha__botao" >+</button>
-                        
-                    </div>
-                
-
+                        <button  class="parameteo-senha__botao" >+</button>                      
+                    </div>                
+                </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Força da senha</h4>
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
