--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>                
                 </div>
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <h4 class="parametro-senha__titulo">Características da senha</h4>
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
