--- a/index.html
+++ b/index.html
@@ -32,10 +32,34 @@
                 </div>                
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
-                    div.parametro-senha-checkbox
+                    <div class="parametro-senha-checkbox">
+                        <input name=”maiusculo” type=”checkbox” checked >
+                        <label for=”maiusculo”>Letras maiúsculas</label
+                            class=”checkbox”>
+
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name=”minusculo” type=”checkbox”>
+                        <label for=”minusculo”>Letras minúsculas</label
+                            class=”checkbox”>
+
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name=”numero” type=”checkbox”>
+                        <label for=”numero”>Números</label
+                            class=”checkbox”>
+                        
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name=”simbolo” type=”checkbox”>
+                        <label for=”simbolo”> Símbolos </label
+                            class=”checkbox”>
+                        
+                    </div>
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <h4 class=”parametro-senha__titulo”>Força da senha</h4>
                 </div>
             </div>
         </div>
